Fix link overflow

--- a/frontend/src/app/modules/workspace/sharing-propetries/share-properties-dialog/share-properties.component.scss
+++ b/frontend/src/app/modules/workspace/sharing-propetries/share-properties-dialog/share-properties.component.scss
@@ -31,6 +31,8 @@
     border-radius: 3px;
     .text-link {
       padding: 6px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
